data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2180.wast
;; 10. **Test 10**: Design a loop that misaligns operand stack state intentionally before the `br_table` instruction. Verify the loop can still exit correctly by resetting the stack appropriately for the label target.     - **Constraint**: Ensures stack-polymorphism and operand type integrity are respected.     - **Relation to Infinite Loops**: Mismanagement here can cause the loop to loop infinitely.

(assert_invalid
  (module
    (func $misaligned-operand-stack
      (loop 
        (block $label0
          (br_table $label0 1 (i32.const 2)) ;; Misalign the stack by having incorrect instructions before the br_table
          (i32.const 1)
        )
      )
    )
  )
  "type mismatch"
)